<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alienshooter.CustomizeActivity">

    <TextView
        android:id="@+id/ShooterCustTimeTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/shooter_customize_time"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/FIFTEEN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/RED"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:contentDescription="@string/RED"
        android:text="@string/RED"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BLACK" />

    <Button
        android:id="@+id/BLACK"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/BLACK"
        android:text="@string/BLACK"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/RED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shooterCustEvil" />

    <TextView
        android:id="@+id/shooterCustEvil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/shooter_customize_evil_alien"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/BLACK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/YELLOW" />

    <Button
        android:id="@+id/YELLOW"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:contentDescription="@string/YELLOW"
        android:text="@string/YELLOW"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/shooterCustEvil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BLUE" />

    <Button
        android:id="@+id/BLUE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/BLUE"
        android:text="@string/BLUE"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/YELLOW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShooterCustFriendlyAlien" />

    <Button
        android:id="@+id/THIRTY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:contentDescription="@string/THIRTY"
        android:text="@string/THIRTY"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ShooterCustFriendlyAlien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIFTEEN" />

    <Button
        android:id="@+id/FIFTEEN"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/FIFTEEN"
        android:text="@string/FIFTEEN"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/THIRTY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShooterCustTimeTitle" />

    <TextView
        android:id="@+id/ShooterCustFriendlyAlien"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/shooter_customize_friendly_alien"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/BLUE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/THIRTY" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/proceed_to_shooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>