<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alienshooter.GameOverActivity">

    <TextView
        android:id="@+id/GameOver"
        android:layout_width="210dp"
        android:layout_height="78dp"
        android:layout_marginTop="44dp"
        android:text="@string/Game_Over"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <Button
        android:id="@+id/Customize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Customize"
        app:layout_constraintBottom_toTopOf="@+id/BackToMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Restart" />

    <Button
        android:id="@+id/BackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/Back_to_Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Game_Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>