<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alienshooter.BonusInstructionActivity">

    <TextView
        android:id="@+id/BonusTitleHeader"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/BonusTitleHeader"
        android:text="@string/BonusTitleHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BonusDescription"
        android:layout_width="350dp"
        android:layout_height="494dp"
        android:contentDescription="@string/BonusRoundDescription"
        android:text="@string/BonusRoundDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BonusTitleHeader" />

    <Button
        android:id="@+id/BonusStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/BonusStarButton"
        android:text="@string/BonusStarButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BonusDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>